añadido nuevo artículo

--- a/_posts/2020-04-19-ECV18.md
+++ b/_posts/2020-04-19-ECV18.md
@@ -4,6 +4,7 @@ title: "Una mirada a las condiciones de vida y al Estado del Bienestar"
 author: "Manuel Mejías Leiva"
 categories: Desigualdad
 tags: [desigualdad, pobreza, renta, estado del bienestar]
+image: /img_covid/imagen_art1.jpg
 ---
 
 
